tests/cases/should_fail/types/missing_raw_ref_type.hash
// run=fail, stage=parse

k: &raw = &raw [1,2,3,4,5,6];
