tests/cases/should_fail/types/missing_raw_ref_type.stderr
error: expected a type annotation, however received a `=`
 --> $DIR/missing_raw_ref_type.hash:1:9
1 |   k: &raw = &raw [1,2,3,4,5,6];
  |           ^ here
